--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  <body>
-    <div id="usercard"> <!--Карта профиля, человека, который к нам обратился-->
-    </div>
-    <p>Just text</p> <!--Просто текст для проверки-->
-    <a class="link" href="https://mihailgok.ru">Link</a> <!--Просто ссылка для проверки-->
-    <p class="hint">Some little hint</p> <!--Просто текст-подсказка для проверки-->
-    <button id="btn" class="button">Show/Hide Main Button</button> <!--Кнопка, чтобы скрыть / показать основную кнопку-->
-    <button id="btnED" class="button">Enable/Disable Main Button</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
- </body>
+  <button id="myButton" onclick="buttonClicked">Нажми меня</button>
+  <script>
+    function buttonClicked() {
+      window.parent.postMessage({type: 'send_data', data: {action: 'buttonClicked'} }, '*')
+    }
+  </script>
 </body>
 </html>
